<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_fragment_item_screen"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/btn_system"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_fragment_item_system"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/btn_hardware"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_fragment_item_hardware"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/btn_cpu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_fragment_item_cpu"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/btn_network"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_fragment_item_network"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/btn_device_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_fragment_item_device_id"
        android:layout_gravity="center"/>

</LinearLayout>